fix: background image was cut off

--- a/src/pages/BlogPage/style.scss
+++ b/src/pages/BlogPage/style.scss
@@ -1,4 +1,6 @@
 #blog-page {
+  min-height: 100vh;
+
   @include media($breakpoint-not-small...) {
     background: url("https://res.cloudinary.com/spencerkline/image/upload/blog-bgimage.jpg") fixed left 75% top 1rem;
     background-size: 100vw;
